discord-frontend/hartex-discord-commands-test/tests/ui/only_pub_items.stderr
error: the CommandMetadata trait can only be derived on pub items
  --> tests/ui/only_pub_items.rs:25:10
   |
25 | #[derive(CommandMetadata)]
   |          ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `CommandMetadata` (in Nightly builds, run with -Z macro-backtrace for more info)
